--- a/css/main.css
+++ b/css/main.css
@@ -1597,6 +1597,7 @@ textarea.custom-input {
   padding: 0;
   margin: 0;
   display: flex;
+  gap:10px;
   flex-wrap: wrap;
 }
   /*.fb {
@@ -1668,12 +1669,10 @@ textarea.custom-input {
   fill: #ffffff;
 }
 
-.social__item + .social__item {
-  margin-left: 10px;
-}
+
 
 .social__link {
-  display: flex;
+  display: flex !important;
   width: 17px;
   height: 17px;
   justify-content: center;
@@ -6441,9 +6440,7 @@ textarea.custom-input {
   color: white;
 }
 
-.post-sb__social .social__item + .social__item {
-  margin-left: 10px;
-}
+
 
 .post-sb__social .social__link {
   width: 30px;
