--- a/css/main.css
+++ b/css/main.css
@@ -7106,11 +7106,9 @@ textarea.custom-input {
 }
 
 .service-card__detail {
-  width: 80%;
   margin:auto;
-  max-width: 394px;
   padding: 20px 0;
-  text-align: center;
+  text-align: right;
   transition: border-color 0.3s ease;
 }
 
