--- a/css/main.css
+++ b/css/main.css
@@ -1819,8 +1819,8 @@ textarea.custom-input {
   z-index: 100;
   display: flex;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: #161616;
 }
 
